test/bad/classes/inheritance05.px

class A def
    Int x

class B(A) def
    Int x
